[metadata]
name = revenuecat_sdk
version = 0.0.1
author = Hakan Özdemir
author_email = hakanozdemir2@yandex.com
description = A Python client library for the RevenueCat API
long_description = file: README.md
url = https://github.com/ha3/revenuecat_sdk
project_urls =
    Bug Tracker = https://github.com/ha3/revenuecat_sdk/issues
license = MIT
keywords =
    revenuecat
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.0

[flake8]
max-line-length = 88
exclude = build,.git,venv,__pycache__,dist

[isort]
combine_as_imports = true
default_section = THIRDPARTY
line_length = 88
multi_line_output = 3
profile = black
